<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.gameconfig.CricketConfig">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cricketType"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cricketTypeName"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/score"
                android:text="@string/cricketType1"
                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noScore"
                android:text="@string/cricketType2"
                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cutThroat"
                android:text="@string/cricketType3"
                android:layout_marginStart="6dp"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cricketSet"
        app:layout_constraintTop_toBottomOf="@id/cricketType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cricketSetName"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/classicSet"
                android:text="@string/cricketSet1"
                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullSet"
                android:text="@string/cricketSet2"
                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customSet"
                android:text="@string/cricketSet3"
                android:layout_marginStart="6dp"/>

        </RadioGroup>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customSetLayout"
        app:layout_constraintTop_toBottomOf="@id/cricketSet"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/customsSetTitle"
            android:text="@string/customName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:id="@+id/numberChooserLayout"
            app:layout_constraintTop_toBottomOf="@id/customsSetTitle"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nrOfNumbers"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType = "number"
                android:id="@+id/nrOfNumbers"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/numberChooserLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intervallum"
                android:text="@string/customSet1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="6dp">
            </RadioButton>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startingNr"
                app:layout_constraintTop_toTopOf="@id/intervallum"
                app:layout_constraintBottom_toBottomOf="@id/intervallum"
                app:layout_constraintLeft_toRightOf="@id/intervallum"
                android:inputType = "number" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/random"
                android:text="@string/customSet2"
                app:layout_constraintTop_toBottomOf="@id/intervallum"
                app:layout_constraintLeft_toLeftOf="parent"

                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chaotic"
                android:text="@string/customSet3"
                app:layout_constraintTop_toBottomOf="@id/random"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="6dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/defined"
                app:layout_constraintTop_toBottomOf="@id/chaotic"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/customSet4"
                  android:layout_marginStart="6dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>