<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rematch"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/rematchTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rematchTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/newOrderText"
        android:layout_marginStart="20dp"
        android:text="@string/newOrder"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newOrderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/orderButtons">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/cyclicalButtonID"
            android:text="@string/cyclical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:id="@+id/reversedButtonID"
            android:text="@string/reversed"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/same"
            android:id="@+id/sameButtonID"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:id="@+id/backToMenu"
        android:text="@string/backToMenu"/>

</androidx.constraintlayout.widget.ConstraintLayout>