<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:id="@+id/deleteTitle"
        android:text="@string/deleteTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/deleteTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/explanationText"
        android:text="@string/deleteExplanation"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/explanationText"
        android:id="@+id/deleteConfirmText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deleteConfirmText"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/okButton"
        android:text="@string/confirmString"/>

</androidx.constraintlayout.widget.ConstraintLayout>