<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="56dp"
            android:text="@string/boardMode"
            android:textSize="24sp"
            android:id="@+id/boardMode"/>

        <RadioButton
            app:layout_constraintTop_toBottomOf="@id/boardMode"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="72dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offline"
            android:text = "@string/offlineRadio"/>

        <RadioButton
            app:layout_constraintTop_toBottomOf="@id/offline"
            app:layout_constraintLeft_toLeftOf="@id/offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/online"
            android:text = "@string/onlineRadio"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toRightOf="@id/online"
            app:layout_constraintTop_toTopOf="@id/online"
            app:layout_constraintBottom_toBottomOf="@id/online"
            android:id="@+id/bluetoothChooser"
            android:text = "@string/btDefault"
            android:textSize="8sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/bluetoothChooser"
            app:layout_constraintTop_toTopOf="@id/bluetoothChooser"
            app:layout_constraintBottom_toBottomOf="@id/bluetoothChooser"
            android:id="@+id/btState"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>